--- a/.travis.yml
+++ b/.travis.yml
@@ -3,38 +3,22 @@ language: ruby
 sudo: false
 
 rvm:
-  - 1.9.3
   - 2.0.0
-  - 2.1.3
-
-matrix:
-  allow_failures:
-    - env: PUPPET_VERSION="3.7" FUTURE_PARSER="yes"
-    - env: PUPPET_VERSION="3.8" FUTURE_PARSER="yes"
+  - 2.1.6
 
 before_install:
   - 'gem install bundler'
 
 script:
   - bundle install
-  - bundle update
-  - bundle exec rake
+  - bundle exec rake test
 
 env:
-  - PUPPET_VERSION="3.0"
-  - PUPPET_VERSION="3.1"
-  - PUPPET_VERSION="3.2"
-  - PUPPET_VERSION="3.3"
-  - PUPPET_VERSION="3.4"
-  - PUPPET_VERSION="3.5"
-  - PUPPET_VERSION="3.6"
-  - PUPPET_VERSION="3.7"
-  - PUPPET_VERSION="3.7" FUTURE_PARSER="yes"
-  - PUPPET_VERSION="3.8"
-  - PUPPET_VERSION="3.8" FUTURE_PARSER="yes"
-  - PUPPET_VERSION="4.0"
-  - PUPPET_VERSION="4.1"
-  - PUPPET_VERSION="4.2"
-  - PUPPET_VERSION="4.3"
-  - PUPPET_VERSION="4.4"
-  - PUPPET_VERSION="4.5"
+  - PUPPET_VERSION="~> 3.8"
+  - PUPPET_VERSION="~> 3.8" FUTURE_PARSER="yes"
+  - PUPPET_VERSION="~> 4.2"
+  - PUPPET_VERSION="~> 4.3"
+  - PUPPET_VERSION="~> 4.4"
+  - PUPPET_VERSION="~> 4.5"
+  - PUPPET_VERSION="~> 4.6"
+  - PUPPET_VERSION="~> 4.7"
