--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,32 @@
 ---
-language: ruby
 sudo: false
-
-rvm:
-  - 2.0.0
-  - 2.1.6
-
-before_install:
-  - 'gem install bundler'
-
-script:
-  - bundle install
-  - bundle exec rake test
-
-env:
-  - PUPPET_VERSION="~> 3.8"
-  - PUPPET_VERSION="~> 3.8" FUTURE_PARSER="yes"
-  - PUPPET_VERSION="~> 4.2"
-  - PUPPET_VERSION="~> 4.3"
-  - PUPPET_VERSION="~> 4.4"
-  - PUPPET_VERSION="~> 4.5"
-  - PUPPET_VERSION="~> 4.6"
-  - PUPPET_VERSION="~> 4.7"
+language: ruby
+bundler_args: --without system_tests
+script: "bundle exec rake validate && bundle exec rake lint && bundle exec rake spec SPEC_OPTS='--format documentation'"
 matrix:
   fast_finish: true
+  include:
+  - rvm: 2.0.0
+    env: PUPPET_GEM_VERSION="~> 3.0" FUTURE_PARSER="yes" ORDERING="random"
+  - rvm: 2.0.0
+    env: PUPPET_GEM_VERSION="~> 3.0" STRICT_VARIABLES="yes" ORDERING="random"
+  - rvm: 2.1.9
+    env: PUPPET_GEM_VERSION="~> 4.0" STRICT_VARIABLES="yes" ORDERING="random"
+  - rvm: '2.1'
+    sudo: required
+    services: docker
+    env: PUPPET_INSTALL_VERSION="1.5.2" PUPPET_INSTALL_TYPE=agent BEAKER_set="centos-7-docker"
+    script: bundle exec rake acceptance
+    bundler_args: --without development
+  - rvm: '2.1'
+    sudo: required
+    services: docker
+    env: PUPPET_INSTALL_VERSION="1.5.2" PUPPET_INSTALL_TYPE=agent BEAKER_set="debian-8-docker"
+    script: bundle exec rake acceptance
+    bundler_args: --without development
+  - rvm: '2.1'
+    sudo: required
+    services: docker
+    env: PUPPET_INSTALL_VERSION="1.5.2" PUPPET_INSTALL_TYPE=agent BEAKER_set="ubuntu-1604-docker"
+    script: bundle exec rake acceptance
+    bundler_args: --without development
