--- a/spec/acceptance/nodesets/debian-8-docker.yml
+++ b/spec/acceptance/nodesets/debian-8-docker.yml
@@ -8,7 +8,9 @@ HOSTS:
     docker_cmd: ["/bin/systemd"]
     docker_preserve_image: true
     docker_image_commands:
-      - apt-get install -yq wget net-tools
+      - apt-get install -yq wget net-tools locales apt-transport-https software-properties-common
+      - locale-gen en en_US en_US.UTF-8
+      - dpkg-reconfigure locales
       - rm /lib/systemd/system/systemd*udev*
       - rm /lib/systemd/system/getty.target
 CONFIG:
