--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,9 +1,14 @@
 fixtures:
   repositories:
-    apt: 'git://github.com/puppetlabs/puppetlabs-apt.git'
-    stdlib: 'git://github.com/puppetlabs/puppetlabs-stdlib.git'
-    epel: 'https://github.com/stahnma/puppet-module-epel.git'
-
+    apt:
+      repo: "git://github.com/puppetlabs/puppetlabs-apt.git"
+      ref: 2.3.0
+    stdlib:
+      repo: "git://github.com/puppetlabs/puppetlabs-stdlib.git"
+      ref: 4.11.0
+    epel:
+      repo: 'https://github.com/stahnma/puppet-module-epel.git'
+      ref: 1.2.2
   symlinks:
     redis: "#{source_dir}"
 
