--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 ---
-sudo: false
 language: ruby
 bundler_args: --without system_tests
 script: "bundle exec rake validate && bundle exec rake lint && bundle exec rake spec SPEC_OPTS='--format documentation'"
@@ -9,33 +8,39 @@ matrix:
     # CentOS 6 has an old version of Redis, requires some future fixes
     - env: PUPPET_INSTALL_VERSION="1.5.2" PUPPET_INSTALL_TYPE=agent BEAKER_set="centos-6-docker"
   include:
-  - rvm: 2.0.0
+  - sudo: required
+    dist: precise
+    rvm: 2.0.0
     env: PUPPET_GEM_VERSION="~> 3.0" FUTURE_PARSER="yes" ORDERING="random"
-  - rvm: 2.0.0
+  - sudo: required
+    dist: precise
+    rvm: 2.0.0
     env: PUPPET_GEM_VERSION="~> 3.0" STRICT_VARIABLES="yes" ORDERING="random"
-  - rvm: 2.1.9
+  - sudo: required
+    dist: precise
+    rvm: 2.1.9
     env: PUPPET_GEM_VERSION="~> 4.0" STRICT_VARIABLES="yes" ORDERING="random"
-  - rvm: '2.3.3'
-    sudo: required
+  - sudo: required
     services: docker
+    rvm: '2.3.3'
     env: PUPPET_INSTALL_VERSION="1.5.2" PUPPET_INSTALL_TYPE=agent BEAKER_set="centos-6-docker"
     script: bundle exec rake acceptance
     bundler_args: --without development
-  - rvm: '2.3.3'
-    sudo: required
+  - sudo: required
     services: docker
+    rvm: '2.3.3'
     env: PUPPET_INSTALL_VERSION="1.5.2" PUPPET_INSTALL_TYPE=agent BEAKER_set="centos-7-docker"
     script: bundle exec rake acceptance
     bundler_args: --without development
-  - rvm: '2.3.3'
-    sudo: required
+  - sudo: required
     services: docker
+    rvm: '2.3.3'
     env: PUPPET_INSTALL_VERSION="1.5.2" PUPPET_INSTALL_TYPE=agent BEAKER_set="debian-8-docker"
     script: bundle exec rake acceptance
     bundler_args: --without development
-  - rvm: '2.3.3'
-    sudo: required
+  - sudo: required
     services: docker
+    rvm: '2.3.3'
     env: PUPPET_INSTALL_VERSION="1.5.2" PUPPET_INSTALL_TYPE=agent BEAKER_set="ubuntu-1604-docker"
     script: bundle exec rake acceptance
     bundler_args: --without development
