Adds redis::administration class
* Allows modification of common redis kernel
tweaks and requirements
* The ones that antirez (redis creator) mentions
and that are mentioned specifically in redis 
when running it in the logs are:
  * Disable THP: https://redis.io/topics/latency
  * Enable Overcommit Memory: https://redis.io/topics/admin
  * somaxconnL http://download.redis.io/redis-stable/redis.conf

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -9,6 +9,12 @@ fixtures:
     epel:
       repo: 'https://github.com/stahnma/puppet-module-epel.git'
       ref: 1.2.2
+    augeasproviders_sysctl:
+      repo: "git://github.com/hercules-team/augeasproviders_sysctl.git"
+      tag: v2.1.0
+    augeasproviders_core:
+      repo: "git://github.com/hercules-team/augeasproviders_core.git"
+      tag: v2.1.0
   symlinks:
     redis: "#{source_dir}"
 
