--- a/.travis.yml
+++ b/.travis.yml
@@ -41,3 +41,9 @@ matrix:
     env: PUPPET_INSTALL_VERSION="1.5.2" PUPPET_INSTALL_TYPE=agent BEAKER_set="ubuntu-1604-docker"
     script: bundle exec rake acceptance
     bundler_args: --without development
+  - sudo: required
+    services: docker
+    rvm: '2.3.3'
+    env: PUPPET_INSTALL_VERSION="1.5.2" PUPPET_INSTALL_TYPE=agent BEAKER_set="ubuntu-1404-docker"
+    script: bundle exec rake acceptance
+    bundler_args: --without development
