--- a/.travis.yml
+++ b/.travis.yml
@@ -47,3 +47,14 @@ matrix:
     env: PUPPET_INSTALL_VERSION="1.5.2" PUPPET_INSTALL_TYPE=agent BEAKER_set="ubuntu-1404-docker"
     script: bundle exec rake acceptance
     bundler_args: --without development
+deploy:
+  provider: puppetforge
+  user: arioch
+  password:
+    secure: GKs0F12bYL2YuN717PzplXvaxvFg8aHT14e7moWzkeoQGXNbZ4JOu7JmsJjWMyPH/mmGDLM3ugQMa8aIC/iM1OronLmc5qERrlQaOZ8L6ytrfqJ0Uo3N8mmqy0MinINOCT0yPjxp/CHxUxg6R+NrZApYru66UN2AsHvFtoa2TZ0=
+  on:
+    tags: true
+    # all_branches is required to use tags
+    all_branches: true
+    # Only publish the build marked with "DEPLOY_TO_FORGE"
+    condition: "$DEPLOY_TO_FORGE = yes"
