--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,15 @@ matrix:
     env: PUPPET_INSTALL_VERSION="1.5.2" PUPPET_INSTALL_TYPE=agent BEAKER_set="ubuntu-1404-docker"
     script: bundle exec rake acceptance
     bundler_args: --without development
+  - sudo: required
+    rvm: '2.4.0'
+    env: PUPPET_VERSION="~> 4.0" CHECK=build DEPLOY_TO_FORGE=yes
+    script: bundle exec rake build
+    bundler_args: --without development
+branches:
+  only:
+  - master
+  - /^v\d/
 deploy:
   provider: puppetforge
   user: arioch
