Change forge pwd hash

--- a/.travis.yml
+++ b/.travis.yml
@@ -62,7 +62,7 @@ deploy:
   provider: puppetforge
   user: arioch
   password:
-    secure: "GKs0F12bYL2YuN717PzplXvaxvFg8aHT14e7moWzkeoQGXNbZ4JOu7JmsJjWMyPH/mmGDLM3ugQMa8aIC/iM1OronLmc5qERrlQaOZ8L6ytrfqJ0Uo3N8mmqy0MinINOCT0yPjxp/CHxUxg6R+NrZApYru66UN2AsHvFtoa2TZ0="
+    secure: N5N2gNr0MTHY2bjBnW6FKk3qwWpYEJ+h5jM5E6058hX4f3zFYQVWwO0xXtlgJ61bG89KN4hMNhvZgYjlh+aAFMS2iNoNiBcNDI4dksu2lR4iIVeP5FIp8JnEh7jNDuldaIqHo2GKjRSkl70lcNC6NzYcAAsiyFvkn5XEDLkbKR8=
   on:
     tags: true
     # all_branches is required to use tags
