--- a/.travis.yml
+++ b/.travis.yml
@@ -23,31 +23,31 @@ matrix:
     services: docker
     rvm: '2.3.3'
     env: PUPPET_INSTALL_VERSION="1.10.8" PUPPET_INSTALL_TYPE=agent BEAKER_set="centos-6-docker"
-    script: bundle exec rake acceptance
+    script: bundle exec rake beaker:suites['default',$BEAKER_set]
     bundler_args: --without development
   - sudo: required
     services: docker
     rvm: '2.3.3'
     env: PUPPET_INSTALL_VERSION="1.10.8" PUPPET_INSTALL_TYPE=agent BEAKER_set="centos-7-docker"
-    script: bundle exec rake acceptance
+    script: bundle exec rake beaker:suites['default',$BEAKER_set]
     bundler_args: --without development
   - sudo: required
     services: docker
     rvm: '2.3.3'
     env: PUPPET_INSTALL_VERSION="1.10.8" PUPPET_INSTALL_TYPE=agent BEAKER_set="debian-8-docker"
-    script: bundle exec rake acceptance
+    script: bundle exec rake beaker:suites['default',$BEAKER_set]
     bundler_args: --without development
   - sudo: required
     services: docker
     rvm: '2.3.3'
     env: PUPPET_INSTALL_VERSION="1.10.8" PUPPET_INSTALL_TYPE=agent BEAKER_set="ubuntu-1604-docker"
-    script: bundle exec rake acceptance
+    script: bundle exec rake beaker:suites['default',$BEAKER_set]
     bundler_args: --without development
   - sudo: required
     services: docker
     rvm: '2.3.3'
-    env: PUPPET_INSTALL_VERSION="1.10.8" PUPPET_INSTALL_TYPE=agent BEAKER_set="ubuntu-1404-docker"
-    script: bundle exec rake acceptance
+    env: PUPPET_INSTALL_VERSION="1.5.2" PUPPET_INSTALL_TYPE=agent BEAKER_set="ubuntu-1404-docker"
+    script: bundle exec rake beaker:suites['default',$BEAKER_set]
     bundler_args: --without development
   - sudo: required
     rvm: '2.4.0'
