--- a/spec/acceptance/nodesets/centos-6-docker.yml
+++ b/spec/acceptance/nodesets/centos-6-docker.yml
@@ -1,5 +1,7 @@
 HOSTS:
   centos-6-x64:
+    roles:
+      - master
     platform: el-6-x86_64
     hypervisor : docker
     image: petems/docker-centos-6-ssh-locale:centos-6
