--- a/spec/acceptance/nodesets/centos-7-docker.yml
+++ b/spec/acceptance/nodesets/centos-7-docker.yml
@@ -1,5 +1,7 @@
 HOSTS:
   centos-7-x64:
+    roles:
+      - master
     platform: el-7-x86_64
     hypervisor : docker
     image: petems/docker-centos-7-ssh-locale:centos-7
