--- a/.travis.yml
+++ b/.travis.yml
@@ -1,63 +1,40 @@
 ---
+sudo: false
+dist: trusty
 language: ruby
-bundler_args: --without system_tests
-script: 'SPEC_OPTS="--format documentation" bundle exec rake validate lint spec'
+cache: bundler
 before_install:
-  - gem install bundler # -v x.x.x if a specific version is needed
+
+before_install:
+  - bundle -v
+  - gem install bundler -v "< 2" --no-ri --no-rdoc || true
+  - rm Gemfile.lock || true
+  - gem --version
+  - bundle -v
+script:
+  - 'bundle exec rake $CHECK'
+bundler_args: --without system_tests
+rvm:
+  - 2.4.4
+env:
+  global:
+    - BEAKER_PUPPET_COLLECTION=puppet5 PUPPET_GEM_VERSION="~> 5.0"
 matrix:
   fast_finish: true
   include:
-  - sudo: required
-    dist: trusty
-    rvm: 2.1.9
-    env: PUPPET_GEM_VERSION="~> 3.0" FUTURE_PARSER="yes" ORDERING="random"
-  - sudo: required
-    dist: trusty
-    rvm: 2.2.2
-    env: PUPPET_GEM_VERSION="~> 3.0" STRICT_VARIABLES="yes" ORDERING="random"
-  - sudo: required
-    dist: trusty
-    rvm: 2.1.9
-    env: PUPPET_GEM_VERSION="~> 4.0" STRICT_VARIABLES="yes" ORDERING="random"
-  - sudo: required
-    services: docker
-    rvm: '2.3.3'
-    env: PUPPET_INSTALL_VERSION="1.10.8" PUPPET_INSTALL_TYPE=agent BEAKER_set="centos-6-docker"
-    script: bundle exec rake beaker:suites['default',$BEAKER_set]
-    bundler_args: --without development
-  - sudo: required
-    services: docker
-    rvm: '2.3.3'
-    env: PUPPET_INSTALL_VERSION="1.10.8" PUPPET_INSTALL_TYPE=agent BEAKER_set="centos-7-docker"
-    script: bundle exec rake beaker:suites['default',$BEAKER_set]
-    bundler_args: --without development
-  - sudo: required
-    services: docker
-    rvm: '2.3.3'
-    env: PUPPET_INSTALL_VERSION="1.10.8" PUPPET_INSTALL_TYPE=agent BEAKER_set="debian-8-docker"
-    script: bundle exec rake beaker:suites['default',$BEAKER_set]
-    bundler_args: --without development
-  - sudo: required
-    services: docker
-    rvm: '2.3.3'
-    env: PUPPET_INSTALL_VERSION="1.10.8" PUPPET_INSTALL_TYPE=agent BEAKER_set="ubuntu-1604-docker"
-    script: bundle exec rake beaker:suites['default',$BEAKER_set]
-    bundler_args: --without development
-  - sudo: required
-    services: docker
-    rvm: '2.3.3'
-    env: PUPPET_INSTALL_VERSION="1.5.2" PUPPET_INSTALL_TYPE=agent BEAKER_set="ubuntu-1404-docker"
-    script: bundle exec rake beaker:suites['default',$BEAKER_set]
-    bundler_args: --without development
-  - sudo: required
-    rvm: '2.4.0'
-    env: PUPPET_VERSION="~> 4.0" CHECK=build DEPLOY_TO_FORGE=yes
-    script: bundle exec rake build
-    bundler_args: --without development
+    -
+      env: CHECK="syntax lint metadata_lint check:symlinks check:git_ignore check:dot_underscore check:test_file"
+    -
+      env: CHECK=parallel_spec
+    -
+      env: PUPPET_GEM_VERSION="~> 4.0" CHECK=parallel_spec
+      rvm: 2.1.9
 branches:
   only:
-  - master
-  - /^v\d/
+    - master
+    - /^v\d/
+notifications:
+  email: false
 deploy:
   provider: puppetforge
   user: arioch
