--- a/.travis.yml
+++ b/.travis.yml
@@ -1,68 +1,47 @@
 ---
+dist: xenial
 language: ruby
-bundler_args: --without system_tests
-script: 'SPEC_OPTS="--format documentation" bundle exec rake validate lint spec'
+cache: bundler
 before_install:
-  - gem install bundler # -v x.x.x if a specific version is needed
+  - gem update --system
+  - gem update bundler
+  - bundle --version
+script:
+  - 'bundle exec rake $CHECK'
 matrix:
   fast_finish: true
   include:
-  - sudo: required
-    dist: trusty
-    rvm: 2.1.9
-    env: PUPPET_GEM_VERSION="~> 3.0" FUTURE_PARSER="yes" ORDERING="random"
-  - sudo: required
-    dist: trusty
-    rvm: 2.2.2
-    env: PUPPET_GEM_VERSION="~> 3.0" STRICT_VARIABLES="yes" ORDERING="random"
-  - sudo: required
-    dist: trusty
-    rvm: 2.1.9
-    env: PUPPET_GEM_VERSION="~> 4.0" STRICT_VARIABLES="yes" ORDERING="random"
-  - sudo: required
-    services: docker
-    rvm: '2.3.3'
-    env: PUPPET_INSTALL_VERSION="1.10.8" PUPPET_INSTALL_TYPE=agent BEAKER_set="centos-6-docker"
-    script: bundle exec rake beaker:suites['default',$BEAKER_set]
-    bundler_args: --without development
-  - sudo: required
-    services: docker
-    rvm: '2.3.3'
-    env: PUPPET_INSTALL_VERSION="1.10.8" PUPPET_INSTALL_TYPE=agent BEAKER_set="centos-7-docker"
-    script: bundle exec rake beaker:suites['default',$BEAKER_set]
-    bundler_args: --without development
-  - sudo: required
-    services: docker
-    rvm: '2.3.3'
-    env: PUPPET_INSTALL_VERSION="1.10.8" PUPPET_INSTALL_TYPE=agent BEAKER_set="debian-8-docker"
-    script: bundle exec rake beaker:suites['default',$BEAKER_set]
-    bundler_args: --without development
-  - sudo: required
-    services: docker
-    rvm: '2.3.3'
-    env: PUPPET_INSTALL_VERSION="1.10.8" PUPPET_INSTALL_TYPE=agent BEAKER_set="ubuntu-1604-docker"
-    script: bundle exec rake beaker:suites['default',$BEAKER_set]
-    bundler_args: --without development
-  - sudo: required
-    services: docker
-    rvm: '2.3.3'
-    env: PUPPET_INSTALL_VERSION="1.5.2" PUPPET_INSTALL_TYPE=agent BEAKER_set="ubuntu-1404-docker"
-    script: bundle exec rake beaker:suites['default',$BEAKER_set]
-    bundler_args: --without development
-  - sudo: required
-    rvm: '2.4.0'
-    env: PUPPET_VERSION="~> 4.0" CHECK=build DEPLOY_TO_FORGE=yes
-    script: bundle exec rake build
-    bundler_args: --without development
+  - rvm: 2.3.7
+    bundler_args: --without system_tests development release
+    env: PUPPET_VERSION="~> 4.0" CHECK=test
+  - rvm: 2.4.4
+    bundler_args: --without system_tests development release
+    env: PUPPET_VERSION="~> 5.0" CHECK=test
+  - rvm: 2.5.3
+    bundler_args: --without system_tests development release
+    env: PUPPET_VERSION="~> 6.0" CHECK=test_with_coveralls
+  - rvm: 2.5.3
+    bundler_args: --without system_tests development release
+    env: PUPPET_VERSION="~> 6.0" CHECK=rubocop
+  - rvm: 2.4.4
+    bundler_args: --without system_tests development release
+    env: PUPPET_VERSION="~> 5.0" CHECK=build DEPLOY_TO_FORGE=yes
 branches:
   only:
   - master
   - /^v\d/
+notifications:
+  email: false
+  irc:
+    on_success: always
+    on_failure: always
+    channels:
+      - "chat.freenode.org#voxpupuli-notifications"
 deploy:
   provider: puppetforge
-  user: arioch
+  user: puppet
   password:
-    secure: "TQDjFEXa95hJ4kCP8bskFyA/vAXKhxc8Rg+qP8611XqfqMPU0XAEE456VnVJ3dAwDrDF080iE0M2aFdAZBW+EzsVmDSGMrpQyJgoxSKKd+d2ybRaNsvXDNJf52966sx+mZ1+cCes+AsP4/wsFQszNsuaf9qjazkQy+I95Tuukvk="
+    secure: ""
   on:
     tags: true
     # all_branches is required to use tags
