--- a/.sync.yml
+++ b/.sync.yml
@@ -1,8 +1,29 @@
 ---
+.travis.yml:
+  docker_sets:
+    - set: ubuntu1404-64m
+    - set: ubuntu1604-64m
+    - set: centos6-64m
+    - set: centos7-64m
+    - set: debian8-64m
 Gemfile:
   optional:
     ':test':
-      - gem 'redis'
-      - gem 'mock-redis'
+      - gem: 'redis'
+      - gem: 'mock_redis'
 spec/spec_helper.rb:
   unmanaged: true
+spec/acceptance/nodesets/ec2/amazonlinux-2016091.yml:
+  delete: true
+spec/acceptance/nodesets/ec2/image_templates.yaml:
+  delete: true
+spec/acceptance/nodesets/ec2/rhel-73-x64.yml:
+  delete: true
+spec/acceptance/nodesets/ec2/sles-12sp2-x64.yml:
+  delete: true
+spec/acceptance/nodesets/ec2/ubuntu-1604-x64.yml:
+  delete: true
+spec/acceptance/nodesets/ec2/windows-2016-base-x64.yml:
+  delete: true
+spec/acceptance/nodesets/archlinux-2-x64.yml:
+  delete: true
