--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -5,6 +5,7 @@ fixtures:
     epel: 'https://github.com/voxpupuli/puppet-epel.git'
     augeasproviders_sysctl: 'https://github.com/hercules-team/augeasproviders_sysctl.git'
     augeasproviders_core: 'https://github.com/hercules-team/augeasproviders_core.git'
+    concat: 'https://github.com/puppetlabs/puppetlabs-concat'
     augeas_core:
       repo: "https://github.com/puppetlabs/puppetlabs-augeas_core"
       puppet_version: ">= 6.0.0"
