Add Ubuntu 20.04 support

--- a/.sync.yml
+++ b/.sync.yml
@@ -4,6 +4,7 @@
   docker_sets:
     - set: ubuntu1604-64m
     - set: ubuntu1804-64m
+    - set: ubuntu2004-64m
     - set: centos6-64m
     - set: centos7-64m
     - set: centos8-64m
