cleanup .fixtures.yml

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -3,12 +3,8 @@ fixtures:
     apt: 'https://github.com/puppetlabs/puppetlabs-apt.git'
     stdlib: 'https://github.com/puppetlabs/puppetlabs-stdlib.git'
     epel: 'https://github.com/voxpupuli/puppet-epel.git'
-    augeasproviders_sysctl: 'https://github.com/hercules-team/augeasproviders_sysctl.git'
-    augeasproviders_core: 'https://github.com/hercules-team/augeasproviders_core.git'
-    augeas_core:
-      repo: "https://github.com/puppetlabs/puppetlabs-augeas_core"
-      puppet_version: ">= 6.0.0"
-    yumrepo_core:
-      repo: "https://github.com/puppetlabs/puppetlabs-yumrepo_core"
-      puppet_version: ">= 6.0.0"
+    augeasproviders_sysctl: 'https://github.com/voxpupuli/puppet-augeasproviders_sysctl.git'
+    augeasproviders_core: 'https://github.com/voxpupuli/puppet-augeasproviders_core.git'
+    augeas_core: "https://github.com/puppetlabs/puppetlabs-augeas_core"
+    yumrepo_core: "https://github.com/puppetlabs/puppetlabs-yumrepo_core"
     systemd: 'https://github.com/voxpupuli/puppet-systemd.git'
