--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,3 +25,5 @@ jobs:
     uses: voxpupuli/gha-puppet/.github/workflows/beaker.yml@v4
     with:
       beaker_hypervisor: 'docker'
+      pidfile_workaround: 'false'
+      unit_runs_on: 'cern-self-hosted'
