--- a/.sync.yml
+++ b/.sync.yml
@@ -1,6 +1,9 @@
 ---
 Gemfile:
   optional:
+    ':system_tests':
+      - gem: 'voxpupuli-acceptance'
+        version: '~> 3.1'
     ':test':
       - gem: 'redis'
       - gem: 'mock_redis'
