--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,10 +1,11 @@
+---
 fixtures:
   repositories:
-    apt: 'https://github.com/puppetlabs/puppetlabs-apt.git'
-    stdlib: 'https://github.com/puppetlabs/puppetlabs-stdlib.git'
-    epel: 'https://github.com/voxpupuli/puppet-epel.git'
-    augeasproviders_sysctl: 'https://github.com/voxpupuli/puppet-augeasproviders_sysctl.git'
-    augeasproviders_core: 'https://github.com/voxpupuli/puppet-augeasproviders_core.git'
-    augeas_core: "https://github.com/puppetlabs/puppetlabs-augeas_core"
-    yumrepo_core: "https://github.com/puppetlabs/puppetlabs-yumrepo_core"
-    systemd: 'https://github.com/voxpupuli/puppet-systemd.git'
+    apt: https://github.com/puppetlabs/puppetlabs-apt.git
+    augeas_core: https://github.com/puppetlabs/puppetlabs-augeas_core
+    augeasproviders_core: https://github.com/voxpupuli/puppet-augeasproviders_core.git
+    augeasproviders_sysctl: https://github.com/voxpupuli/puppet-augeasproviders_sysctl.git
+    epel: https://github.com/voxpupuli/puppet-epel.git
+    stdlib: https://github.com/puppetlabs/puppetlabs-stdlib.git
+    systemd: https://github.com/voxpupuli/puppet-systemd.git
+    yumrepo_core: https://github.com/puppetlabs/puppetlabs-yumrepo_core
