--- a/.sync.yml
+++ b/.sync.yml
@@ -6,3 +6,7 @@ Gemfile:
       - gem: 'mock_redis'
 spec/spec_helper.rb:
   facterdb_string_keys: true
+
+.github/workflows/ci.yml:
+  with:
+    beaker_hypervisor: 'docker'
